---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/invalid_tag.txt
---
error: Unexpected end of input
 --> test.html:2:6
  |
2 | hello
  |      ^
